--- a/.github/workflows/arc-test.yml
+++ b/.github/workflows/arc-test.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   Explore-GitHub-Actions:
     # You need to use the INSTALLATION_NAME from the previous step
-    runs-on: github-arc-runners
+    runs-on: github-arc-runners-x2
     steps:
     - run: echo "🎉 This job uses runner scale set runners!"
 
